sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: ';' expected but 'for' found.
		b=false	for (i<-0 to a-2) {
                        ^